[package]
name = "amd64"
description = "Firework AMD64 implementation crate"
repository = "https://github.com/Firework-OS/AMD64"
keywords = ["amd64"]
categories = ["no-std"]
version = "0.1.0"
authors = ["VisualDevelopment"]
edition = "2021"
license-file = "LICENSE"

[profile.release]
lto = true

[dependencies]
modular-bitfield = "0.11.2"
