[package]
name = "amd64"
description = "The BoxOS AMD64 implementation crate"
repository = "https://github.com/Firework-OS/AMD64"
keywords = ["amd64"]
categories = ["no-std"]
version = "0.1.0"
authors = ["ChefKiss Inc"]
edition = "2021"
license-file = "LICENSE"

[profile.release]
lto = true

[dependencies]
arrayvec = { version = "0.7.2", default-features = false }
num_enum = { version = "0.5.7", default-features = false, features = [
    "nightly",
] }
modular-bitfield = "0.11.2"
